# ctup-experiments

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md  Regex.txt  environment.yaml  generate_fk.sh  init_path_vars.sh  rghosal_regex.txt  support.txt
apps/ctup_fkcc/runtime/: collision.h  pin_collision.h  pin_shapes.h  typedefs.h  vamp_collision_stda.h
apps/ctup_fkcc/runtime/pin_compat/: CMakeLists.txt  pin_collision.cpp  pin_collision.h
apps/ctup_sd/runtime/: utils.h
apps/rla_fk/: CMakeLists.txt  README.md
apps/rla_fk/rla_fk_dispatcher/: CMakeLists.txt  fk_dispatcher.h  fk_impl.cpp  robot_traits.h
apps/rla_fk/runtime/: utils.h
apps/rla_fk/scripts/: ctup_fk_batched.cpp  debug_fk.cpp  debug_fk_batched.cpp  eval_fk.cpp  eval_fk_batched.cpp  naive_fk.cpp  naive_fk_batched.cpp  pin_fk.cpp  pin_fk_codegen.cpp  pin_fk_codegen_vectorized_comp.cpp
apps/rla_fk/scripts/batched_s8/: batched_s8_baxter.cpp  batched_s8_hyq.cpp  batched_s8_iiwa.cpp
apps/rla_fk_batch_size_sweep/: CMakeLists.txt  README.md
apps/rla_fk_batch_size_sweep/runtime/: utils.h
apps/rla_fk_batch_size_sweep/scripts/: eval_batch_size_sweep.cpp
apps/rla_fk_ct_tt_study/: CMakeLists.txt
apps/rla_fk_ct_tt_study/runtime/: utils.h
apps/rla_fk_ct_tt_study/scripts/: eval_ct_tt_study.cpp
apps/rla_fk_intrin/: CMakeLists.txt  README.md
apps/rla_fk_intrin/rla_fk_intrin_dispatcher/: CMakeLists.txt  fk_dispatcher.h  fk_impl.cpp  robot_traits.h
apps/rla_fk_intrin/runtime/: utils.h
apps/rla_fk_intrin/scripts/: debug_fk_intrin.cpp  eval_fk_intrin.cpp
apps/rla_fkcc_early_exit/: CMakeLists.txt
apps/rla_fkcc_early_exit/pin_compat/: CMakeLists.txt  pin_collision.cpp  pin_shapes.h
apps/rla_fkcc_early_exit/runtime/: collision.h  vamp_collision.h
apps/rla_fkcc_early_exit/runtime/pin_compat/: pin_collision.cpp  pin_shapes.h
apps/rla_fkcc_early_exit/scripts/: debug_fkcc.cpp  eval_fkcc.cpp  eval_fkcc_comp.cc  eval_rrtc_comp.cc
apps/rla_grad_self_collision/: CMakeLists.txt  README.md
apps/rla_grad_self_collision/rla_sd_grad_dispatcher/: sd_grad_dispatcher.h  sd_grad_impl.cpp
apps/rla_grad_self_collision/runtime/: utils.h
apps/rla_grad_self_collision/scripts/: debug_sd_grad.cpp  eval_sd_grad.cpp  fkcc_np_tmp_panda.cpp
apps/rla_rnea/: CMakeLists.txt  README.md
apps/rla_rnea/runtime/: rnea_runtime.h  robot_traits.h  runtime_dispatcher.h
apps/rla_rnea/scripts/: debug_rnea.cpp  eval_rnea.cpp  pin_rnea_codegen.cpp
apps/rla_spatial_jacobian/: CMakeLists.txt  README.md
apps/rla_spatial_jacobian/rla_spatial_jac_dispatcher/: CMakeLists.txt  jac_dispatcher.h  jac_impl.cpp  robot_traits.h
apps/rla_spatial_jacobian/runtime/: utils.h
apps/rla_spatial_jacobian/scripts/: debug_batched_jac.cpp  debug_eef_jac.cpp  debug_jac.cpp  eval_batched_jac.cpp  eval_jac.cpp  pin_eef_jac_codegen.cpp  scratch_jac.cpp
apps/sample10/: driver  driver.cpp  fk_gen.h
cmake/: FindClang.cmake
environment/: scene001.yaml
experiments/fk_struct_sparsity_sweep/: add_mul_count.py  xs_baxter  xs_hyq  xs_iiwa
helper_scripts/: cpp17-warning-fix.patch  generate_fk.sh  generate_fk_batch_size_sweep.sh  generate_fk_ct_tt_study.sh  generate_fkcc.sh  generate_rnea.sh  generate_sd_grad.sh  generate_spatial_jac.sh  pinocchio-fkcc-build-fix.patch
models/baxter/: baxter_spherized_1.urdf
models/iiwa/: iiwa_2link.urdf  iiwa_rbd_accel.urdf
models/synth_12/: dual_6dof.urdf  quad_3dof.urdf  serial_12dof.urdf  tree_2_5_5.urdf  triple_4dof.urdf
samples/: README.md  batched_fk_intrin.cpp  batched_fk_sweep.cpp  batched_fkcc_early_exit.cpp  batched_grad_self_collision.cpp  batched_rla_fk.cpp  batched_rla_fk_ct_tt_study.cpp  batched_rla_fk_no_tt_sparsity.cpp  batched_self_collision_sd.cpp  batched_spatial_jacobian.cpp  eigenmatrix_fk.cpp  franken_batched_fkcc_early_exit.cpp  jacobian_layouts.h  rla_fk_batch_size_sweep.cpp  rnea_layouts.h  sample10.cpp  sample11.cpp  sample12.cpp  sample13.cpp  sample14.cpp  sample15.cpp  sample16.cpp  sample17.cpp  sample8.cpp  sample9.cpp  scalar_rla_fk.cpp  scalar_rla_rnea.cpp  scalar_spatial_jacobian.cpp  xform_layouts.h
samples/deprecated/: sample15.cpp  sample17.cpp
scripts/: ctup_fk_batched.cpp  debug_eef_jac.cpp  debug_fk.cpp  debug_fk_batched.cpp  debug_fkcc.cpp  debug_jacobian.cpp  debug_rnea.cpp  debug_sd_grad.cpp  eval_fk.cpp  eval_fk_batched.cpp  eval_fkcc.cpp  eval_rnea.cpp  eval_simd.cpp  gen_fk.cpp  naive_fk_batched.cpp  pin_eef_jac_codegen.cpp  pin_fk.cpp  pin_fk_codegen.cpp  pin_fk_codegen_vectorized_comp.cpp
